--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "engin@engin.com",
+    "Issuer": "engin@engin.com",
+    "AccesTokenExpiration": 20,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
