--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CrossCuttingConcerns\Cashing\Redis\" />
+  </ItemGroup>
+
 </Project>
